@@ -434,7 +434,7 @@ class EntryProxy(SCons.Util.Proxy):
 
     # In PY3 if a class defines __eq__, then it must explicitly provide
     # __hash__.  Since SCons.Util.Proxy provides __eq__ we need the following
-    # see: https://docs.python.org/3.1/reference/datamodel.html#object.__hash__
+    # see: https://docs.python.org/3/reference/datamodel.html#object.__hash__
     __hash__ = SCons.Util.Delegate('__hash__')
 
     def __get_abspath(self):
