@@ -36,11 +36,7 @@ start_time = time.time()
 
 import collections
 import os
-
-try:
-    from StringIO import StringIO
-except ImportError:
-    from io import StringIO
+from io import StringIO
 
 import sys
 
