@@ -193,11 +193,7 @@ class UtilTestCase(unittest.TestCase):
         try:
             node, expect, withtags = self.tree_case_1()
 
-            if sys.version_info.major < 3:
-                IOStream = io.BytesIO
-            else:
-                IOStream = io.StringIO
-
+            IOStream = io.StringIO
             sys.stdout = IOStream()
             print_tree(node, get_children)
             actual = sys.stdout.getvalue()
@@ -249,11 +245,6 @@ class UtilTestCase(unittest.TestCase):
     def test_is_Dict(self):
         assert is_Dict({})
         assert is_Dict(UserDict())
-
-        # os.environ is not a dictionary in python 3
-        if sys.version_info < (3, 0):
-            assert is_Dict(os.environ)
-
         try:
             class mydict(dict):
                 pass
