@@ -98,11 +98,6 @@ def default_mapper(entry, name):
         val = eval("entry." + name)
     except AttributeError:
         val = None
-    if sys.version_info.major >= 3 and isinstance(val, bytes):
-        # This is a dirty hack for py 2/3 compatibility. csig is a bytes object
-        # in Python3 while Python2 bytes are str. Hence, we decode the csig to a
-        # Python3 string
-        val = val.decode()
     return str(val)
 
 
@@ -327,8 +322,8 @@ class Do_SConsignDB:
             sys.stderr.write("sconsign: ignoring invalid `%s' file `%s': %s\n"
                              % (self.dbm_name, fname, e))
             exc_type, _, _ = sys.exc_info()
-            if exc_type.__name__ == "ValueError" and sys.version_info < (3,0,0):
-                sys.stderr.write("Python 2 only supports pickle protocols 0-2.\n")
+            if exc_type.__name__ == "ValueError":
+                sys.stderr.write("unrecognized pickle protocol.\n")
             return
 
         if Print_Directories:
